[project]
name = "donut"
version = "0.1.0"
description = "DONUT: A Decoder-Only Model for Trajectory Prediction"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "av2>=0.3.4",
  "lightning>=2.5.1",
  "numpy>=2.1.3",
  "torch==2.5.0",
  "torch-cluster==1.6.3+pt25cu124",
  "torch-geometric>=2.6.1",
  "torch-scatter==2.1.2+pt25cu124",
]

[tool.uv.sources]
torch = [{ index = "torch-cu124" }]

[[tool.uv.index]]
name = "torch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv]
find-links = [
  "https://data.pyg.org/whl/torch-2.5.0+cu124.html",
]
